fixing show shift add shift bar component

--- a/server/src/main/assets/stylesheets/main.less
+++ b/server/src/main/assets/stylesheets/main.less
@@ -1451,7 +1451,7 @@ p {
 }
 
 .staffing-controls-title {
-  font-size: 2.50rem;
+  font-size: 2.00rem;
   padding-left: 10px;
   display: flex;
   align-items: center;
